--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python -m mkdocs gh-deploy --config-file mkdocs.yml --remote-branch gh-pages
+          python -m mkdocs gh-deploy --config-file mkdocs.yml --remote-branch gh-pages --force
