testing this instead of html

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,23 +18,23 @@ theme:
 nav: 
   - Home: 'index.md'
   - 'Design':
-    - 'Design HOME': '/design'
-    - 'COTS Library': '/design/cots-library'
-    - 'CAD Fundamentals': '/design/cad-fundamentals'
-    - 'Iteration Process': '/design/iteration-process'
-    - 'Int. Subteam Knowledge': '/design/inter-sub-knowledge'
-    - 'Mech. Challenges': '/design/mech-challenges'
-    - 'Org./Doc.': '/design/org-documentation'
-    - 'Physics In Design': '/design/physics-in-design'
-    - 'Strat. Design': '/design/strategic-design'
-    - 'Sustainability': '/design/sustainability'
-    - 'External Resources': '/design/external-resources'
+    - 'Design HOME': 'design'
+    - 'COTS Library': 'design/cots-library'
+    - 'CAD Fundamentals': 'design/cad-fundamentals'
+    - 'Iteration Process': 'design/iteration-process'
+    - 'Int. Subteam Knowledge': 'design/inter-sub-knowledge'
+    - 'Mech. Challenges': 'design/mech-challenges'
+    - 'Org./Doc.': 'design/org-documentation'
+    - 'Physics In Design': 'design/physics-in-design'
+    - 'Strat. Design': 'design/strategic-design'
+    - 'Sustainability': 'design/sustainability'
+    - 'External Resources': 'design/external-resources'
   - 'Electronics':
-    - 'Electronics Home': '/electronics'
-    - 'Motors': '/electronics/motors'
-    - 'Electrical Components': '/electronics/electrical-components'
-    - 'Pneumatic Components': '/electronics/pneumatic-components'
-    - 'Concepts': '/electronics/concepts'
+    - 'Electronics Home': 'electronics'
+    - 'Motors': 'electronics/motors'
+    - 'Electrical Components': 'electronics/electrical-components'
+    - 'Pneumatic Components': 'electronics/pneumatic-components'
+    - 'Concepts': 'electronics/concepts'
 plugins:
     - ffc-mkdocs-video
     - search
